// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SiteFooter renders correctly with no social links 1`] = `
.c8 #wcb_2 {
  display: none!important;
}

.c1 {
  display: grid;
  min-height: auto;
  position: relative;
  width: 100%;
  column-gap: calc(24px);
  grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
}

.c1 >* {
  grid-column: 2/auto;
}

.c4 {
  display: flex;
  gap: 1.5rem;
  justify-content: center;
  flex-wrap: wrap;
}

.c11 {
  color: var(--color-paragraph);
  font-size: 0.875rem;
  line-height: 1.5;
  margin: 0;
  padding: 0;
}

.c0 {
  background: var(--color-badge-bg);
  border-top: 1px solid rgba(128, 128, 128, 0.12);
  padding-bottom: 1.5rem;
  padding-top: 3rem;
}

.c2 {
  border-bottom: 1px solid rgba(128, 128, 128, 0.12);
  margin-bottom: 2rem;
  padding-bottom: 2rem;
  text-align: center;
}

.c3 {
  color: var(--color-headline);
  font-family: var(--font-space-grotesk),sans-serif;
  font-size: 2rem;
  font-weight: 700;
  line-height: 1;
  margin: 0 0 1.5rem;
}

.c5 {
  align-items: center;
  display: flex;
  flex-direction: column;
  gap: 1rem;
  text-align: center;
}

.c6 {
  align-items: center;
  display: flex;
  justify-content: center;
}

.c9 {
  align-items: center;
  display: flex;
  flex-direction: column;
  gap: 0.75rem;
}

.c7 {
  opacity: 0.7;
  transform: scale(0.9);
  transform-origin: center center;
}

.c10 {
  align-items: center;
  display: flex;
  flex-direction: column;
  flex-shrink: 0;
  gap: 0.5rem;
}

@media (min-width: 600px) {
  .c1 {
    column-gap: calc(24px);
    grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
  }
}

@media (min-width: 900px) {
  .c1 {
    column-gap: calc(36px);
    grid-template-columns: 1fr min(1440px, 100% - 72px) 1fr;
  }
}

@media (min-width: 1200px) {
  .c1 {
    column-gap: calc(81px);
    grid-template-columns: 1fr min(1440px, 100% - 162px) 1fr;
  }
}

@media (min-width: 1536px) {
  .c1 {
    column-gap: calc(121.5px);
    grid-template-columns: 1fr min(1440px, 100% - 243px) 1fr;
  }
}

@media (min-width: 600px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1200px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1536px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 900px) {
  .c2 {
    border-bottom: none;
  }
}

@media (min-width: 1200px) {
  .c3 {
    font-size: 2.5rem;
  }
}

@media (min-width: 900px) {
  .c5 {
    align-items: flex-end;
    display: grid;
    gap: 1.5rem;
    grid-template-columns: 1fr 1fr 1fr;
    text-align: left;
  }
}

@media (min-width: 900px) {
  .c6 {
    justify-content: flex-start;
  }
}

@media (min-width: 900px) {
  .c9 {
    align-items: center;
    text-align: center;
  }
}

@media (min-width: 900px) {
  .c7 {
    transform-origin: left center;
  }
}

@media (min-width: 900px) {
  .c10 {
    align-items: flex-end;
  }
}

<div>
  <footer
    class="c0"
    role="contentinfo"
  >
    <section
      class="c1"
    >
      <div
        class="c2"
      >
        <h2
          class="c3"
        >
          Let's work together.
        </h2>
        <div
          class="c4"
        />
      </div>
      <div
        class="c5"
      >
        <div
          class="c6"
        >
          <div
            class="c7"
          >
            <div
              class="c8"
            >
              <div
                class="carbonbadge wcb-d "
                id="wcb"
              />
            </div>
          </div>
        </div>
        <div
          class="c9"
        />
        <div
          class="c10"
        >
          <p
            class="c11"
          >
            © 
            2026
             
            Andrea Agostini
          </p>
        </div>
      </div>
    </section>
  </footer>
</div>
`;

exports[`SiteFooter renders correctly with social links 1`] = `
.c10 #wcb_2 {
  display: none!important;
}

.c1 {
  display: grid;
  min-height: auto;
  position: relative;
  width: 100%;
  column-gap: calc(24px);
  grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
}

.c1 >* {
  grid-column: 2/auto;
}

.c4 {
  display: flex;
  gap: 1.5rem;
  justify-content: center;
  flex-wrap: wrap;
}

.c5 {
  color: var(--color-highlight);
  font-size: 1rem;
  line-height: 1;
  text-decoration: none;
  transition: color 0.2s ease-in-out;
}

.c5:focus-visible {
  outline: 2px solid var(--color-highlight);
  outline-offset: 2px;
}

.c12 {
  color: var(--color-paragraph);
  font-size: 0.875rem;
  line-height: 1.5;
  margin: 0;
  padding: 0;
}

.c0 {
  background: var(--color-badge-bg);
  border-top: 1px solid rgba(128, 128, 128, 0.12);
  padding-bottom: 1.5rem;
  padding-top: 3rem;
}

.c2 {
  border-bottom: 1px solid rgba(128, 128, 128, 0.12);
  margin-bottom: 2rem;
  padding-bottom: 2rem;
  text-align: center;
}

.c3 {
  color: var(--color-headline);
  font-family: var(--font-space-grotesk),sans-serif;
  font-size: 2rem;
  font-weight: 700;
  line-height: 1;
  margin: 0 0 1.5rem;
}

.c6 {
  color: var(--color-highlight);
  font-weight: 700;
}

.c7 {
  align-items: center;
  display: flex;
  flex-direction: column;
  gap: 1rem;
  text-align: center;
}

.c8 {
  align-items: center;
  display: flex;
  justify-content: center;
}

.c11 {
  align-items: center;
  display: flex;
  flex-direction: column;
  gap: 0.75rem;
}

.c13 {
  color: var(--color-paragraph);
  max-width: 36ch;
}

.c9 {
  opacity: 0.7;
  transform: scale(0.9);
  transform-origin: center center;
}

.c14 {
  align-items: center;
  display: flex;
  flex-direction: column;
  flex-shrink: 0;
  gap: 0.5rem;
}

@media (min-width: 600px) {
  .c1 {
    column-gap: calc(24px);
    grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
  }
}

@media (min-width: 900px) {
  .c1 {
    column-gap: calc(36px);
    grid-template-columns: 1fr min(1440px, 100% - 72px) 1fr;
  }
}

@media (min-width: 1200px) {
  .c1 {
    column-gap: calc(81px);
    grid-template-columns: 1fr min(1440px, 100% - 162px) 1fr;
  }
}

@media (min-width: 1536px) {
  .c1 {
    column-gap: calc(121.5px);
    grid-template-columns: 1fr min(1440px, 100% - 243px) 1fr;
  }
}

@media (min-width: 600px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1200px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1536px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (hover: hover) {
  .c5:hover {
    color: var(--color-tertiary);
  }
}

@media (min-width: 900px) {
  .c2 {
    border-bottom: none;
  }
}

@media (min-width: 1200px) {
  .c3 {
    font-size: 2.5rem;
  }
}

@media (min-width: 900px) {
  .c7 {
    align-items: flex-end;
    display: grid;
    gap: 1.5rem;
    grid-template-columns: 1fr 1fr 1fr;
    text-align: left;
  }
}

@media (min-width: 900px) {
  .c8 {
    justify-content: flex-start;
  }
}

@media (min-width: 900px) {
  .c11 {
    align-items: center;
    text-align: center;
  }
}

@media (min-width: 900px) {
  .c9 {
    transform-origin: left center;
  }
}

@media (min-width: 900px) {
  .c14 {
    align-items: flex-end;
  }
}

<div>
  <footer
    class="c0"
    role="contentinfo"
  >
    <section
      class="c1"
    >
      <div
        class="c2"
      >
        <h2
          class="c3"
        >
          Let's work together.
        </h2>
        <div
          class="c4"
        >
          <a
            aria-label="LinkedIn"
            class="c5 c6"
            href="https://linkedin.com/in/agostiniandrea"
            rel="noopener noreferrer"
            target="_blank"
          >
            LinkedIn
          </a>
          <a
            aria-label="GitHub"
            class="c5 c6"
            href="https://github.com/agostiniandrea"
            rel="noopener noreferrer"
            target="_blank"
          >
            GitHub
          </a>
          <a
            aria-label="Email"
            class="c5 c6"
            href="mailto:a.agostini92@gmail.com"
          >
            Email
          </a>
        </div>
      </div>
      <div
        class="c7"
      >
        <div
          class="c8"
        >
          <div
            class="c9"
          >
            <div
              class="c10"
            >
              <div
                class="carbonbadge wcb-d "
                id="wcb"
              />
            </div>
          </div>
        </div>
        <div
          class="c11"
        >
          <p
            class="c12 c13"
          >
            <span>
              Building for the web, one component at a time. Based in Bangkok.
            </span>
          </p>
        </div>
        <div
          class="c14"
        >
          <p
            class="c12"
          >
            © 
            2026
             
            Andrea Agostini
          </p>
        </div>
      </div>
    </section>
  </footer>
</div>
`;
